--- a/books.html
+++ b/books.html
@@ -70,7 +70,7 @@
       <div class="col-md-5 mb-3">
         <img src="res/book/cover_order_of_the_phoenix.jpg" alt='"Harry Potter and the Order of the Phoenix" book cover'
           class="img-fluid img-portrait">
-        <img src="res/book/cover_order_of_the_phoenix-landscape.jpg" class="img-fluid img-landscape">
+        <img src="res/book/cover_order_of_the_phoenix-landscape.jpg" class="img-fluid img-landscape rounded">
       </div>
 
       <div class="col">
@@ -102,7 +102,7 @@
     <div class="row">
       <div class="col-md-5 mb-3">
         <img src="res/book/cover_tekvin.jpg" alt='"Tekvin" book cover' class="img-fluid img-portrait">
-        <img src="res/book/cover_tekvin-landscape.jpg" class="img-fluid img-landscape">
+        <img src="res/book/cover_tekvin-landscape.jpg" class="img-fluid img-landscape rounded">
       </div>
 
       <div class="col">
@@ -135,7 +135,7 @@
       <div class="col-md-5 mb-3">
         <img src="res/book/cover_beyoglu_rapsodisi.jpg" alt='"Beyoğlu Rapsodisi" book cover'
           class="img-fluid img-portrait">
-        <img src="res/book/cover_beyoglu_rapsodisi-landscape.jpg" class="img-fluid img-landscape">
+        <img src="res/book/cover_beyoglu_rapsodisi-landscape.jpg" class="img-fluid img-landscape rounded">
       </div>
 
       <div class="col">
