--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <!-- Introduction -->
     <div class="row">
       <div class="col-sm-4 col-md-3 mb-2">
-        <img src="res/b.ozdogan_-portrait.jpg" id="pp-portrait" class="img-fluid rounded profile-pic" alt="Portrait">
-        <img src="res/b.ozdogan_.jpg" id="pp-landscape" class="img-fluid rounded profile-pic" alt="Portrait">
+        <img src="res/b.ozdogan_-portrait.jpg" class="img-fluid img-portrait rounded profile-pic" alt="Portrait">
+        <img src="res/b.ozdogan_.jpg" class="img-fluid img-landscape rounded profile-pic" alt="Portrait">
       </div>
 
       <div class="col-sm-8 col-lg-5 mb-4">
