--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,20 +12,26 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <link href="css/main.css" rel="stylesheet">
-  <title>bozdogan: Yet Another Bootstrap Website!</title>
+  <style>
+    input, textarea{width: 100%}
+    .media-link{margin: 0 .5rem;}
+    .media-link img{height: 48px;}
+  </style>
+  <title>bozdogan: Contact Form</title>
 </head>
 
 <body>
   <!-- NAV AREA -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#top"><img src="res/homepage-icon.png" width="36" height="36" class="d-inline-block align-top" alt="bozdogan"> bozdogan</a>
+    <a class="navbar-brand" href="#top"><img src="res/homepage-icon.png" width="36" height="36"
+        class="d-inline-block align-top" alt="bozdogan"> bozdogan</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navigation">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
@@ -51,23 +58,94 @@
   </nav>
 
   <!-- SECTION -->
-  <main role="main" class="container-fluid">
+  <main role="main" class="container">
 
     <div class="row">
-      <div class="col">    
-        <div class="center">
-          <h1>Bootstrap Contact Page</h1>
-          <p class="lead">Use this document as a way to quickly start any new project.<br>
-            All you get is this text and a mostly barebones HTML document.</p>
+      <div class="col">
+        <div class="text-center">
+          <h1 class="display-4">Contact Me</h1>
+          <p class="lead">To contact me, you can either fill the form or use one of the links.</p>
         </div>
       </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-4"><h2>Row 1</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias ullam quasi quam magni qui enim! Mollitia sunt magni aliquid nobis, ex, sint ipsam a rerum alias, autem distinctio fugiat?</div>
-        <div class="col-sm-8"><h2>Row 2</h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum doloribus ex tempore quae quo ut fugit et animi, quia deleniti harum provident necessitatibus officiis. Nisi illo temporibus ducimus maxime nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum molestias odio veniam enim quas itaque quasi mollitia tempora nesciunt ipsa. Eaque qui odit sequi eligendi obcaecati aliquid cupiditate, necessitatibus minima?</div>
-    </div>
+      <div class="col-md-6">
+        <!-- Form -->
+        <div class="container mb-3">
+          <form action="" onsubmit="alert('Message sent.')">
+            <div class="row">
+              <div class="col-4">
+                <label for="fullname">Name and Surname</label>
+              </div>
+              <div class="col">
+                <input type="text" id="fullname" name="fullname" required></div>
+            </div>
+            <div class="row">
+              <div class="col-4"><label for="email">E-Mail</label></div>
+              <div class="col"><input type="email" id="email" name="email" required></div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                <label for="telephone">Telephone</label>
+              </div>
+              <div class="col">
+                <input type="text" id="telephone" name="telephone" pattern="\d+" maxlength="11"
+                  placeholder="Max. 11 digits are allowed" required>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-4">
+                <label for="issue">Issue</label>
+              </div>
+              <div class="col">
+                <input type="text" id="issue" name="issue" required>
+              </div>
+            </div>
 
+            <div class="row mb-3">
+              <div class="col-4">
+                <label for="message">Message</label>
+              </div>
+              <div class="col">
+                <textarea id="message" name="message" maxlength="1000" required></textarea>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col text-right">
+                <button type="submit" class="btn btn-primary" value="Send">Send</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <!-- OR -->
+      <div class="col-md-1 text-center my-auto">
+        <p class="h2 mb-3">OR</p>
+      </div>
+
+      <div class="col-md-5">
+          <p class="mb-5">My e-mail address is <a class="text-monospace" href="mailto:bozdoganbora42@gmail.com">bozdoganbora42@gmail.com</a>.</p>
+
+          <!-- <a href="index.htm"><img src="res/home.png" height="48" alt="Home"></a><br> -->
+
+          <p class="lead text-center">Find me on social media:</p>
+          <p class="text-center">
+            <a href="https://facebook.com/fantastik51" class="media-link " target="_blank">
+              <img src="res/fb_icon.png" height="48" alt="Facebook" title="My Facebook Profile">
+            </a>
+            <a href="https://instagram.com/b.ozdogan_" class="media-link" target="_blank">
+              <img src="res/ig_icon.png" height="48" alt="Instagram" title="My Instagram Profile">
+            </a>
+            <a href="https://twitter.com/betakarotenfln" class="media-link" target="_blank">
+              <img src="res/tw_icon.png" height="48" alt="Twitter"
+                title="My Twitter Account (I started to use twitter :))">
+            </a>
+        </p>
+      </div>
+    </div>
   </main>
 
   <!-- Bootstrap core JavaScript -->
@@ -78,4 +156,5 @@
     crossorigin="anonymous"></script>
   <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
