--- a/books.html
+++ b/books.html
@@ -57,17 +57,11 @@
   <main role="main" class="container-fluid">
 
     <!-- PAGE HEADER -->
-    <div class="row mb-4">
-      <div class="col">
-        <div class="text-center">
-          <p class="display-4 mb-4">Some Books I Like</p>
-        </div>
-      </div>
-    </div>
+    <p class="display-4 text-center mb-5">Some Books I Like</p>
 
     <!-- SECTION -->
     <div class="row">
-      <div class="col-md-5 mb-3">
+      <div class="col-sm-5 mb-3">
         <img src="res/book/cover_order_of_the_phoenix.jpg" alt='"Harry Potter and the Order of the Phoenix" book cover'
           class="img-fluid img-portrait">
         <img src="res/book/cover_order_of_the_phoenix-landscape.jpg" class="img-fluid img-landscape rounded">
@@ -100,7 +94,7 @@
 
     <!-- SECTION -->
     <div class="row">
-      <div class="col-md-5 mb-3">
+      <div class="col-sm-5 mb-3">
         <img src="res/book/cover_tekvin.jpg" alt='"Tekvin" book cover' class="img-fluid img-portrait">
         <img src="res/book/cover_tekvin-landscape.jpg" class="img-fluid img-landscape rounded">
       </div>
@@ -132,7 +126,7 @@
 
     <!-- SECTION -->
     <div class="row">
-      <div class="col-md-5 mb-3">
+      <div class="col-sm-5 mb-3">
         <img src="res/book/cover_beyoglu_rapsodisi.jpg" alt='"Beyoğlu Rapsodisi" book cover'
           class="img-fluid img-portrait">
         <img src="res/book/cover_beyoglu_rapsodisi-landscape.jpg" class="img-fluid img-landscape rounded">
