--- a/links.html
+++ b/links.html
@@ -12,10 +12,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <link href="css/main.css" rel="stylesheet">
-  <style>
-    @media(min-width:576px){.links dt{text-align: right}}
-    .links{max-width: 570px;;}
-  </style>
+  <link href="css/page-links.css" rel="stylesheet">
   <title>bozdogan: the p0rtal</title>
 </head>
 
@@ -56,10 +53,10 @@
     </div>
   </nav>
 
-  <!-- SECTION -->
+  <!-- PAGE CONTENT -->
   <main role="main" class="links container-fluid">
 
-    <p class="text-center display-4">Useful Links</p>
+    <p class="text-center display-4 mr-5 mb-4">Useful Links</p>
      
     <!-- Link list -->
     <div class="links container">
