--- a/music.html
+++ b/music.html
@@ -11,13 +11,6 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <link href="css/main.css" rel="stylesheet">
-  <style>
-    body{margin: 0;}
-  .greeting{
-    height: 100vh;
-  }
-  </style>
-
   <title>bozdogan: Yet Another Bootstrap Website!</title>
 </head>
 
@@ -60,8 +53,9 @@
   <!-- SECTION -->
   <main role="main" class="container-fluid">
 
-    <div class="greeting jumbotron">
-      <p class="display-3">Cambaz</p>
+    <div class="jumbotron text-center">
+        <p class="display-1">Cambaz</p>
+        <p class="display-3 text-muted">Work In Progress</p>
     </div>
 
   </main>
