--- a/register.html
+++ b/register.html
@@ -11,20 +11,22 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <link href="css/main.css" rel="stylesheet">
-  <title>bozdogan: Yet Another Bootstrap Website!</title>
+  <link href="css/page-register.css" rel="stylesheet">
+  <title>bozdogan: Fake Registration Form!</title>
 </head>
 
 <body>
   <!-- NAV AREA -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#top"><img src="res/homepage-icon.png" width="36" height="36" class="d-inline-block align-top" alt="bozdogan"> bozdogan</a>
+    <a class="navbar-brand" href="#top"><img src="res/homepage-icon.png" width="36" height="36"
+        class="d-inline-block align-top" alt="bozdogan"> bozdogan</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navigation">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
@@ -50,24 +52,152 @@
     </div>
   </nav>
 
-  <!-- SECTION -->
-  <main role="main" class="container-fluid">
+  <!-- PAGE CONTENT -->
+  <main role="main" class="container">
 
-    <div class="row">
-      <div class="col">    
-        <div class="text-center">
-          <h1>Bootstrap Registration Page</h1>
-          <p class="lead">Use this document as a way to quickly start any new project.<br>
-            All you get is this text and a mostly barebones HTML document.</p>
+    <!-- Page Header -->
+    <div class="text-center mb-4">
+      <h1 class="display-4">Sign Up</h1>
+      <p class="lead">The registration process is fully transparent.</p>
+    </div>
+
+    <!-- Form Section -->
+    <form action="registration.htm" onsubmit="alert('Thanks for registration!')">
+    <div class="row form-group">
+      <div class="col-4">
+        <label for="fullname">Name & Surname</label>
+      </div>
+      <div class="col">
+        <input type="text" id="fullname" class="form-control" name="fullname" size="24" required>
+      </div>
+    </div>
+
+    <div class="row form-group">
+      <div class="col-4">
+        <label for="email">E-Mail</label>
+      </div>
+      <div class="col">
+        <input type="email" id="email" class="form-control" name="email" required>
+      </div>
+    </div>
+
+    <div class="row form-group">
+      <div class="col-4">
+        <label for="password">Password</label>
+      </div>
+      <div class="col">
+        <input type="password" id="password" class="form-control" name="password" size="24" required>
+      </div>
+    </div>
+
+    <div class="row form-group mb-4">
+      <div class="col-4">
+        <label for="birthdate">Date of Birth</label>
+      </div>
+      <div class="col">
+        <input type="date" id="birthdate" class="form-control" name="birthdate" required>
+      </div>
+    </div>
+
+    <div class="row form-group mb-4">
+      <div class="col-4">
+        <label for="gender">Gender</label>
+      </div>
+      <div class="col">
+        <select id="gender" class="form-control" name="gender">
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="gay">I don't want to specify.</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row form-group mb-4">
+      <div class="col-4">
+        <label for="aboutme">About Yourself</label>
+      </div>
+      <div class="col">
+        <textarea id="aboutme" class="form-control" name="aboutme" maxlength="1000" required></textarea>
+      </div>
+    </div>
+
+    <div class="row mb-4">
+      <div class="col-4">
+        <label for="ppic">Upload your photo</label>
+      </div>
+      <div class="col">
+        <div class="custom-file">
+          <input type="file" class="form-control-file" id="ppic" name="ppic" accept="image/*">
         </div>
       </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-4"><h2>Row 1</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias ullam quasi quam magni qui enim! Mollitia sunt magni aliquid nobis, ex, sint ipsam a rerum alias, autem distinctio fugiat?</div>
-        <div class="col-sm-8"><h2>Row 2</h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum doloribus ex tempore quae quo ut fugit et animi, quia deleniti harum provident necessitatibus officiis. Nisi illo temporibus ducimus maxime nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum molestias odio veniam enim quas itaque quasi mollitia tempora nesciunt ipsa. Eaque qui odit sequi eligendi obcaecati aliquid cupiditate, necessitatibus minima?</div>
+    <div class="row mb-4">
+      <div class="col-4">
+        <label>Mark your interests</label>
+      </div>
+      <div class="col">
+        <div class="container"><div class="row">
+            <div class="col-6 col-md">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-art">
+                <label class="form-check-label" for="cb-art">Art</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-technology">
+                <label class="form-check-label" for="cb-science">Science</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-tech">
+                <label class="form-check-label" for="cb-technology">Technology</label>
+              </div>
+      
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-games">
+                <label class="form-check-label" for="cb-games">Games</label>
+              </div>
+            </div>
+
+            <div class="col-6 col-md">
+              <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="cb-music">
+                  <label class="form-check-label" for="cb-music">Music</label>
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="cb-animals">
+                  <label class="form-check-label" for="cb-animals">Animals</label>
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="cb-fashion">
+                  <label class="form-check-label" for="cb-fashion">Fashion</label>
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="cb-economy">
+                  <label class="form-check-label" for="cb-economy">Economy</label>
+                </div>
+            </div>
+
+            <div class="col-md">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-sports">
+                <label class="form-check-label" for="cb-sports">Sports</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="cb-politics">
+                <label class="form-check-label" for="cb-politics">Politics</label>
+              </div>
+            </div>
+          </div></div>
+      </div>
     </div>
 
+    <div class="row form-group">
+      <div class="col text-right">
+        <button type="reset" class="btn btn-secondary mr-3">Reset</button>
+        <button type="submit" class="btn btn-primary">Send</button>
+      </div>
+    </div>
+    </form>
   </main>
 
   <!-- Bootstrap core JavaScript -->
