FINAL COMMIT (hopefully)

--- a/books.html
+++ b/books.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Somewhat useless page. Just some books.">
+  <meta name="author" content="b._ozdogan">
   <link rel="icon" href="res/favicon.png">
 
   <!-- Bootstrap core CSS -->
@@ -80,10 +80,10 @@
         <p class="book-details">
           <dl>
             <dt>Author:</dt>
-            <dl>J. K. Rowling</dl>
+            <dd>J. K. Rowling</dd>
 
             <dt>Year of Publication:</dt>
-            <dl>2003</dl>
+            <dd>2003</dd>
           </dl>
         </p>
       </div>
@@ -112,10 +112,10 @@
         <p class="book-details">
           <dl>
             <dt>Author:</dt>
-            <dl>Arif Evgin</dl>
+            <dd>Arif Evgin</dd>
 
             <dt>Year of Publication:</dt>
-            <dl>2018</dl>
+            <dd>2018</dd>
           </dl>
         </p>
       </div>
@@ -149,10 +149,10 @@
         <p class="book-details">
           <dl>
             <dt>Author:</dt>
-            <dl>Ahmet Ümit</dl>
+            <dd>Ahmet Ümit</dd>
 
             <dt>Year of Publication:</dt>
-            <dl>2010</dl>
+            <dd>2010</dd>
           </dl>
         </p>
       </div>
