--- a/films.html
+++ b/films.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Cool movie suggestions">
+  <meta name="author" content="b.ozdogan_">
   <link rel="icon" href="res/favicon.png">
 
   <!-- Bootstrap core CSS -->
@@ -76,8 +76,7 @@
       </div>
 
       <div class="col">
-        <p class="lead">In a future British tyranny, a shadowy freedom fighter, known only by the alias of "V", plots to
-          overthrow it with the help of a young woman.</p>
+        <p class="lead">In a future British tyranny, a shadowy freedom fighter, known only by the alias of "V", plots to overthrow it with the help of a young woman.</p>
 
         <p class="info-btn-container">
           <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#description1"
@@ -87,6 +86,23 @@
         </p>
         <div class="collapse" id="description1">
           <div class="card card-body bg-dark">
+            <p class="film-details">
+              <dl>
+                <dt>Year:</dt>
+                <dd>2018</dd>
+
+                <dt>Directed by:</dt>
+                <dd>James McTeigue</dd>
+                
+                <dt>Produced by:</dt>
+                <dd>
+                  Joel Silver<br>
+                  Grant Hill<br>
+                  The Wachowskis
+                </dd>
+              </dl>
+            </p>
+
             <p class="mb-0">Learn more at:
               <a href="https://www.imdb.com/title/tt0434409" target="_blank" class="btn btn-warning btn-imdb mx-1"><img
                   src="res/imdb_yazi.png" class="img-fluid" alt="IMDb" title="V for Vendetta - IMDb"></a>
@@ -125,6 +141,16 @@
         </p>
         <div class="collapse" id="description2">
           <div class="card card-body bg-dark">
+            <p class="film-details">
+              <dl>
+                <dt>Year:</dt>
+                <dd>1992</dd>
+
+                <dt>Directed &amp; Produced by:</dt>
+                <dd>Martin Brest</dd>
+              </dl>
+            </p>
+
             <p class="mb-0">Learn more at:
               <a href="https://www.imdb.com/title/tt0105323/" target="_blank" class="btn btn-warning btn-imdb mx-1"><img
                   src="res/imdb_yazi.png" class="img-fluid" alt="IMDb" title="Scent of a Woman - IMDb"></a>
@@ -164,6 +190,22 @@
         </p>
         <div class="collapse" id="description3">
           <div class="card card-body bg-dark">
+            <p class="film-details">
+            <dl>
+              <dt>Year:</dt>
+              <dd>1999</dd>
+
+              <dt>Directed by:</dt>
+              <dd>David Fincher</dd>
+              
+              <dt>Produced by:</dt>
+              <dd>
+                Art Linson<br>
+                Ceán Chaffin<br>
+                Ross Grayson Bell
+              </dd>
+            </dl>
+
             <p class="mb-0">Learn more at:
               <a href="https://www.imdb.com/title/tt0137523" target="_blank" class="btn btn-warning btn-imdb mx-1"><img
                   src="res/imdb_yazi.png" class="img-fluid" alt="IMDb" title="Fight Club - IMDb"></a>
