--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Bora Özdoğan's school project">
+  <meta name="author" content="cnhide">
   <link rel="icon" href="res/favicon.png">
 
   <!-- Bootstrap core CSS -->
