--- a/links.html
+++ b/links.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Some kind of mini portal :)">
+  <meta name="author" content="b.ozdogan_">
   <link rel="icon" href="res/favicon.png">
 
   <!-- Bootstrap core CSS -->
