--- a/register.html
+++ b/register.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Registration form to ´bozdogan´. It's just a form.">
+  <meta name="author" content="b.ozdogan_">
   <link rel="icon" href="res/favicon.png">
 
   <!-- Bootstrap core CSS -->
