--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <!-- //@TODO -->
-    <div class="invisible row" style="padding-top: 1.5rem">
+    <div class="row" style="display:none">
       <div class="col-3"></div>
       <div class="col">
         <h2>//@TODO</h2>
@@ -117,12 +117,12 @@
           <li>Breadcrumb ekle.
             <ul><li>Breadcrumb gerektirecek derin sayfalar yaz.</li></ul>
           </li>
-          <li>ABORT Navbarın rengini değiştir. (opsiyonel)</li>
-          <li>Sayfalara uygun başlıklar ver.</li>
-          <li>Meta verileri ekle.</li>
-          <li>Müzik ekle. scrollu tam sayfada fln</li>
-          <li>Daha fazla link ekle.</li>
-          <li>Film ayrıntıları ekle.</li>
+          <li><s>ABORT Navbarın rengini değiştir. (opsiyonel)</s></li>
+          <li>OK Sayfalara uygun başlıklar ver.</li>
+          <li>OK Meta verileri ekle.</li>
+          <li><s>ABORT Müzik ekle. scrollu tam sayfada fln</s></li>
+          <li>OK Daha fazla link ekle.</li>
+          <li>OK Film ayrıntıları ekle.</li>
           <li>OK Ana sayfadaki giriş formunu düzgün bir yere koy.</li>
         </ul>
       </div>
