--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Form Section -->
-    <form action="registration.htm" onsubmit="alert('Thanks for registration!')">
+    <form action="register.html" onsubmit="alert('Thanks for registration!')">
     <div class="row form-group">
       <div class="col-4">
         <label for="fullname">Name & Surname</label>
@@ -104,7 +104,8 @@
         <label for="gender">Gender</label>
       </div>
       <div class="col">
-        <select id="gender" class="form-control" name="gender">
+        <select id="gender" class="form-control" name="gender" required>
+          <option value="" default></option>
           <option value="male">Male</option>
           <option value="female">Female</option>
           <option value="gay">I don't want to specify.</option>
@@ -127,7 +128,7 @@
       </div>
       <div class="col">
         <div class="custom-file">
-          <input type="file" class="form-control-file" id="ppic" name="ppic" accept="image/*">
+          <input type="file" class="form-control-file" id="ppic" name="ppic" accept="image/*" required>
         </div>
       </div>
     </div>
@@ -140,50 +141,50 @@
         <div class="container"><div class="row">
             <div class="col-6 col-md">
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-art">
+                <input type="checkbox" class="form-check-input" id="cb-art" name="cb-art">
                 <label class="form-check-label" for="cb-art">Art</label>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-technology">
+                <input type="checkbox" class="form-check-input" id="cb-science" name="cb-science">
                 <label class="form-check-label" for="cb-science">Science</label>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-tech">
+                <input type="checkbox" class="form-check-input" id="cb-technology" name="cb-technology">
                 <label class="form-check-label" for="cb-technology">Technology</label>
               </div>
       
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-games">
+                <input type="checkbox" class="form-check-input" id="cb-games" name="cb-games">
                 <label class="form-check-label" for="cb-games">Games</label>
               </div>
             </div>
 
             <div class="col-6 col-md">
               <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="cb-music">
+                  <input type="checkbox" class="form-check-input" id="cb-music" name="cb-music">
                   <label class="form-check-label" for="cb-music">Music</label>
                 </div>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="cb-animals">
+                  <input type="checkbox" class="form-check-input" id="cb-animals" name="cb-animals">
                   <label class="form-check-label" for="cb-animals">Animals</label>
                 </div>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="cb-fashion">
+                  <input type="checkbox" class="form-check-input" id="cb-fashion" name="cb-fashion">
                   <label class="form-check-label" for="cb-fashion">Fashion</label>
                 </div>
                 <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="cb-economy">
+                  <input type="checkbox" class="form-check-input" id="cb-economy" name="cb-economy">
                   <label class="form-check-label" for="cb-economy">Economy</label>
                 </div>
             </div>
 
             <div class="col-md">
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-sports">
+                <input type="checkbox" class="form-check-input" id="cb-sports" name="cb-sports">
                 <label class="form-check-label" for="cb-sports">Sports</label>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="cb-politics">
+                <input type="checkbox" class="form-check-input" id="cb-politics" name="cb-politics">
                 <label class="form-check-label" for="cb-politics">Politics</label>
               </div>
             </div>
