--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <div class="container-fluid" id="login-form-container">
           <h3 class="text-center">Login</h3>
 
-          <form action="#" method="POST">
+          <form action="game.html" method="POST">
             <div class="row form-group">
               <div class="col-3">
                 <label for="username">Username</label>
               </div>
               <div class="col">
-                <input class="form-control" id="username" name="username">
+                <input class="form-control" id="username" name="username" required>
               </div>
             </div>
 
@@ -94,7 +94,7 @@
               </div>
 
               <div class="col">
-                <input type="password" class="form-control" id="password" name="password">
+                <input type="password" class="form-control" id="password" name="password" required>
               </div>
             </div>
 
