Easter egg added

--- a/hw3_jsgame.html
+++ b/hw3_jsgame.html
@@ -10,8 +10,8 @@
   <title>Breakout: The Movie: The Game!</title>
 </head>
 <body>
-  <a class="nav-link" href="index.html">Go back</a>
-  <br><br>
+
+  <h1>Breakout Game</h1>
   
   <div class="game-container">
     <canvas id="game-canvas"></canvas><br>
