--- a/game.html
+++ b/game.html
@@ -26,6 +26,9 @@
 
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link small" href="hw3_jsgame.html">Only The Game</a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link small" href="game.html">The Game <span class="sr-only">(current)</span></a>
         </li>
@@ -111,7 +114,7 @@
   
   <!-- Game script -->
   <script src="js/game.js"></script>
-  <script> // mangifier
+  <script> // Dev tools: Magnifier!
   function scale_ui(multiplier){
       margin.top *= multiplier;
       margin.right *= multiplier;
